# appium_public

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  GIT_RULES.md  README.md  README_CLONE.md  Todo.md  change_note.md  change_notes.md  conftest.py  generate_allure_guide_pdf.py  generate_pdf.py  package.json  pixel5.appiumsession  pyproject.toml  pytest.ini  readme_status.md  requirements.txt  run-app.sh  test22.appiumsession
.claude/: CLAUDE.md  settings.json  settings.local.json
config/: capabilities.py
docs/: ALLURE_REPORT_GUIDE.md  APP_STRUCTURE.md  CODING_GUIDELINES.md  IOS_SETUP_GUIDE.md  IOS_TEST_GUIDE.md  MAC_SETUP_GUIDE.md  PORTFOLIO_GUIDE.md  PUBLIC_PUSH_GUIDE.md  PYTEST_GUIDE.md  README_CLONE.md  UI_DUMP_GUIDE.md  feature_list.md
pages/: base_page.py  sample_page.py
shell/: bootstrap.ps1  run-aos.sh  run-app.sh  run-ios.sh  run-live.sh  run-stg.sh
tests/: test_01.py  test_language_module.py
tests/android/: __init__.py  basic_01_test.py  gme1_test.py  local_transfer_test.py  test_01.py  (+2 more)
tools/: debug_keyboard.py  dump_ui.py  explore_app.py  export_summary.py  fix_git_messages.py  run_allure.py  serve.py  teams_notify.py  test_login_live.py  trigger_listener.py  ui_dump.py  ui_dump_ios.py  update_dashboard.py  upload_to_dashboard.py
ui_dumps/: 20260122_132631_006.xml  20260122_132635_007.xml  debug_adb_only_dump.xml  debug_after_keycode_login.xml  debug_after_sendkeys.xml  debug_keyboard_multiwindow.xml  debug_security_keyboard.xml  debug_w3c_tap.xml
utils/: auth.py  helpers.py  initial_screens.py  language.py
(+212 files in other folders)
